was fixed p.to-do__text-desc width and word-wrap

--- a/week6/to_do_UI/app/scss/_to_do.scss
+++ b/week6/to_do_UI/app/scss/_to_do.scss
@@ -83,9 +83,11 @@
   }
 
   &__task-desc {
+    max-width: 400px;
     width: 100%;
     padding: 0 5px;
     text-align: left;
+    word-wrap: break-word;
   }
 
   &__del-btn {
